# nextcloud_analytics_rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
