[package]
name = "nextcloud_analytics_rs"
version = "0.1.0"
authors = ["Benjamin Bouvier <public@benj.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7" }
tokio = { version = "0.2.22", features = ["full"] }
json = "0.12.4"
chrono = "0.4.15"
